--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,74 @@
-anyio==3.6.2
-autopep8==2.0.2
-black==23.3.0
-bleak==0.20.2
+annotated-types==0.7.0
+anyio==4.4.0
+attrs==23.2.0
+autopep8==2.3.1
+black==24.4.2
+bleak==0.22.2
 bleak-winrt==1.2.0
 bottle==0.12.25
-certifi==2022.12.7
-cffi==1.15.1
-click==8.1.3
-clr-loader==0.2.5
+certifi==2024.6.2
+cffi==1.16.0
+click==8.1.7
+clr-loader==0.2.6
 colorama==0.4.6
-fastapi==0.95.1
+dnspython==2.6.1
+email_validator==2.2.0
+fastapi==0.111.0
+fastapi-cli==0.0.4
 h11==0.14.0
-httptools==0.5.0
-idna==3.4
-itsdangerous==2.1.2
-MarkupSafe==2.1.2
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
 mypy-extensions==1.0.0
-packaging==23.1
-pathspec==0.11.1
-platformdirs==3.5.1
-proxy-tools==0.1.0
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==1.10.7
-python-dotenv==1.0.0
-python-osc==1.8.1
-pythonnet==3.0.1
-pywebview==4.0.2
-PyYAML==6.0
-sniffio==1.3.0
-starlette==0.26.1
-typing_extensions==4.5.0
-uvicorn==0.22.0
-watchfiles==0.19.0
-websockets==11.0.3
-Werkzeug==2.2.3
-wincertstore==0.2
+orjson==3.10.5
+outcome==1.3.0.post0
+packaging==24.1
+pathspec==0.12.1
+pip-review==1.3.0
+platformdirs==4.2.2
+proxy_tools==0.1.0
+pycodestyle==2.12.0
+pycparser==2.22
+pydantic==2.7.4
+pydantic_core==2.18.4
+Pygments==2.18.0
+PySocks==1.7.1
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-osc==1.8.3
+pythonnet==3.0.3
+pywebview==5.1
+PyYAML==6.0.1
+rich==13.7.1
+selenium==4.22.0
+shellingham==1.5.4
+sniffio==1.3.1
+sortedcontainers==2.4.0
+starlette==0.37.2
+trio==0.25.1
+trio-websocket==0.11.1
+typer==0.12.3
+typing_extensions==4.12.2
+ujson==5.10.0
+urllib3==2.2.2
+uvicorn==0.30.1
+watchfiles==0.22.0
+websocket-client==1.8.0
+websockets==12.0
+Werkzeug==3.0.3
+wincertstore==0.2.1
+winrt-runtime==2.1.0
+winrt-Windows.Devices.Bluetooth==2.1.0
+winrt-Windows.Devices.Bluetooth.Advertisement==2.1.0
+winrt-Windows.Devices.Bluetooth.GenericAttributeProfile==2.1.0
+winrt-Windows.Devices.Enumeration==2.1.0
+winrt-Windows.Foundation==2.1.0
+winrt-Windows.Foundation.Collections==2.1.0
+winrt-Windows.Storage.Streams==2.1.0
+wsproto==1.2.0
