--- a/settings.yaml
+++ b/settings.yaml
@@ -1,14 +1,14 @@
-can_update_power: true
-coyote_addr_a: /avatar/parameters/EarLDis
+can_update_power: false
+coyote_addr_a: /avatar/parameters/D9_Tail_IsGrabbed
 coyote_addr_b: /avatar/parameters/EarRDis
 coyote_connect_timeout: 40
-coyote_max_power_a: 300
-coyote_max_power_b: 300
+coyote_max_power_a: 128
+coyote_max_power_b: 128
 coyote_multiplier: 7.68
-coyote_pattern_a: vibrator_4
-coyote_pattern_b: vibrator_4
+coyote_pattern_a: vibrator_3
+coyote_pattern_b: vibrator_3
 coyote_safe_mode: true
-coyote_uid: ""
+coyote_uid: C4:0D:8D:10:F9:D3
 max_limit: 0.8
 min_limit: 0.2
 min_power: 0.5
